// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconEdit should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-edit "
  height={14}
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="fill-color"
    d="M3.21 7.89l6.47-6.48a2 2 0 0 1 2.88 2.78h-.05L6 10.72 3.21 7.89zM2.24 9l2.83 2.83L1.67 13c-.52.18-.79-.1-.62-.61z"
    fill="#999"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconEdit should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-edit test"
  height={100}
  title="title"
  viewBox="0 0 14 14"
  width={200}
>
  <path
    className="fill-color"
    d="M3.21 7.89l6.47-6.48a2 2 0 0 1 2.88 2.78h-.05L6 10.72 3.21 7.89zM2.24 9l2.83 2.83L1.67 13c-.52.18-.79-.1-.62-.61z"
    fill="#999"
  />
</AccessibleSVG>
`;
